--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typescript-module-boilerplate",
+  "name": "react-redux-confirm",
   "version": "0.0.1",
   "scripts": {
     "format": "prettier --write 'src/**/*.{ts,tsx}'",
