--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "scripts": {
     "format": "prettier --write 'src/**/*.{ts,tsx}'",
     "build": "rm -rf lib && tsc -p .",
-    "prepublish": "npm run build",
-    "postinstall": "npm run build"
+    "prepublish": "npm run build"
   },
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
